# INTERFACE-DE-AUIDIO

./: .gitignore  CONTEXT.md  DUBLAGEM_MASTER_PRO_v14_ACCENT_FIX.py  INICIAR_V14_ACCENT_FIX.bat  README.md  SEPRAR_AUDIOS.py  _audio_quality_gate.py  _fix_worker_sig.py  _patch_accent_fix.py  _patch_add_btn_tudo.py  _patch_audio_trans.py  _patch_v13_menu.py  _patch_validacao.py  _test_audio_quality_gate.py  _test_completo.py  _test_long_batch_stability.py  _test_missing_en.py  _test_palatal.py  _test_reference_short.py  _test_ui_exec.py  config_pratico.json  crash_log.txt  settings.json  ui_language.py
.serena/: project.yml
REFERENCIA/: SEPRAR_AUDIOS.py
backup/: DUBLAGEM_MASTER_PRO_v14_ACCENT_FIX.py  INICIAR_V14_ACCENT_FIX.bat  _fix_player.py  _fix_player_name.py  _patch_explorer.py  _patch_inject_players.py  _patch_integrar_validacao.py  _patch_validacao.py  _test_missing_en.py  crash_log.txt  dublagem_omni11_kliffFIX_TESTE.py  dublagem_omni6_kliff.py  settings.json
dublagem-master-tauri/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
dublagem-master-tauri/.cargo/: config.toml
dublagem-master-tauri/.github/workflows/: ci.yml
dublagem-master-tauri/docs/: ARCHITECTURE.md  MODEL_MANIFEST.example.json
dublagem-master-tauri/docs/adr/: 0001-audio-original-como-autoridade-temporal.md
dublagem-master-tauri/scripts/: package-portable.mjs
dublagem-master-tauri/src/: App.module.css  App.tsx  main.tsx
dublagem-master-tauri/src-tauri/: Cargo.toml  tauri.conf.json
dublagem-master-tauri/src-tauri/capabilities/: default.json
dublagem-master-tauri/src-tauri/crates/domain/: Cargo.toml
dublagem-master-tauri/src-tauri/crates/domain/src/: lib.rs
dublagem-master-tauri/src-tauri/src/: commands.rs  config.rs  crash_report.rs  error.rs  jobs.rs  lib.rs  main.rs  output_layout.rs  project_metadata.rs  state.rs  text.rs
dublagem-master-tauri/src-tauri/src/audio/: mod.rs
dublagem-master-tauri/src-tauri/src/speech/: gpu.rs  mod.rs  models.rs  omnivoice.rs  runtime.rs  whisper.rs
dublagem-master-tauri/src-tauri/src/translation/: mod.rs
dublagem-master-tauri/src/features/audio-player/: AudioPlayer.module.css  AudioPlayer.test.tsx  AudioPlayer.tsx  audioWaveform.test.ts  audioWaveform.ts
dublagem-master-tauri/src/features/dubbing/: DubbingPanel.module.css  DubbingPanel.tsx  TimingAlignmentReportPanel.module.css  TimingAlignmentReportPanel.test.tsx  TimingAlignmentReportPanel.tsx  dubbingAction.test.ts  dubbingAction.ts
dublagem-master-tauri/src/features/project-explorer/: ProjectExplorer.module.css  ProjectExplorer.tsx
dublagem-master-tauri/src/features/settings/: SettingsPanel.module.css  SettingsPanel.tsx
dublagem-master-tauri/src/features/validation/: ValidationPanel.module.css  ValidationPanel.tsx
dublagem-master-tauri/src/shared/: speechModels.ts
dublagem-master-tauri/src/shared/app/: metadata.ts
dublagem-master-tauri/src/shared/audio/: families.test.ts  families.ts
dublagem-master-tauri/src/shared/errors/: fatalErrorReporter.test.ts  fatalErrorReporter.ts
dublagem-master-tauri/src/shared/omnivoice/: nativeControls.test.ts  nativeControls.ts
dublagem-master-tauri/src/shared/tauri/: client.ts  configGuards.ts  openLocation.ts  pathPicker.ts  types.ts
dublagem-master-tauri/src/shared/text/: ptBr.test.ts  ptBr.ts
dublagem-master-tauri/src/shared/ui/: PathField.module.css  PathField.tsx
dublagem-master-tauri/src/stores/: workspaceStore.test.ts  workspaceStore.ts
dublagem-master-tauri/src/styles/: theme.css
dublagem-master-tauri/tests/e2e/: workspace.spec.ts
rejeitados_revisao_manual/: log_qualidade.txt
