[package]
name = "dublagem-master-tauri"
version = "1.0.0"
description = "NSG Gaming Dub desktop application"
authors = ["NSG Gaming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "crates/domain"]
resolver = "2"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dublagem_master_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
dublagem-domain = { path = "crates/domain" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hound = "3.5"
symphonia = { version = "0.5", features = ["flac", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }
whisper-rs = { version = "0.16", optional = true }
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
omnivoice-infer = { path = "../vendor/omnivoice-rs/crates/omnivoice-infer", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["ml", "cuda"]
ml = [
    "dep:whisper-rs",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:omnivoice-infer",
]
cuda = [
    "ml",
    "whisper-rs/cuda",
    "candle-core/cuda",
    "candle-nn/cuda",
    "omnivoice-infer/cuda",
]

[patch.crates-io]
candle-kernels = { path = "../vendor/candle-kernels" }
esaxx-rs = { path = "../vendor/esaxx-rs" }
whisper-rs-sys = { path = "../vendor/whisper-rs-sys" }
